src/test/ui/span/dropck-object-cycle.stderr
error[E0597]: `*m` does not live long enough
  --> $DIR/dropck-object-cycle.rs:37:32
   |
37 |     assert_eq!(object_invoke1(&*m), (4,5));
   |                                ^^ borrowed value does not live long enough
...
57 | }
   | - `*m` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error: aborting due to previous error

